--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "axios": "^0.16.2",
     "immutable": "^3.8.1",
     "material-components-web": "^0.12.1",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-mdc-web": "^0.12.2",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "weather-icons": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
