--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
+    "jest": "^20.0.4",
     "react-scripts": "1.0.7",
     "remote-redux-devtools": "^0.5.11"
   },
@@ -27,7 +29,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,5 +52,10 @@
       "node": true,
       "jasmine": true
     }
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
