added reducers tests

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --coverage",
     "test:watch": "npm test -- --watch",
     "eject": "react-scripts eject"
   },
