--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react-app": "^3.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
     "jest": "^20.0.4",
+    "nock": "^9.0.13",
     "react-scripts": "1.0.7",
+    "redux-mock-store": "^1.2.3",
     "remote-redux-devtools": "^0.5.11"
   },
   "dependencies": {
@@ -55,7 +58,7 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "react-app"
     ]
   }
 }
